website/static/website/css/news.css
.news_image{
    float: left;
    padding-right: 0px;
    padding-bottom: 0px;
    padding-top: 5px;
    vertical-align: top;
}

.news_content{
    padding-top: 0px;
    padding-left: 0px;
    padding-bottom: 0px;
    margin: 0 auto;
    width: 100%;
    overflow: hidden;
}

.news-well p {
    margin: 0px;
    
}


/**
 * https://css-tricks.com/line-clampin/ relevant to text wrapping
 * Firefox support comes from here http://jsfiddle.net/danield770/DpQ7e/30/ and 
 * http://stackoverflow.com/questions/20594995/why-webkit-line-clamping-does-not-work-in-firefox
 */
.line-clamp {
      position: relative;
      max-height: 2.8em; /* exactly three lines */
    }
.line-clamp:after {
    position: absolute;
    bottom: 0;
    right: 0;
    width: 70%;
    height: 1.4em;
    
}

@supports (-webkit-line-clamp: 2) {
    .line-clamp {
        display: -webkit-box;
        -webkit-line-clamp: 2;
        -webkit-box-orient: vertical;  
        max-height:2.8em; /* I needed this to get it to work */
        height: auto;
    }
    .line-clamp:after {
        display: none;
    }
}

.content-clamp {
      position: relative;
      max-height: 8.4em; /* exactly three lines */
    }
.content-clamp:after {
    position: absolute;
      bottom: 0;
      right: 0;
      width: 70%;
      height: 1.4em;
      
 }

@supports (-webkit-line-clamp: 2) {
    .content-clamp {
        display: -webkit-box;
        -webkit-line-clamp: 6;
        -webkit-box-orient: vertical;  
        max-height:8.4em; /* I needed this to get it to work */
        height: auto;
    }
    .content-clamp:after {
        display: none;
    }
}


.news_info{
    padding-left: 50px;
    padding-top: 0px;
    width: 100%
}

.news_title{
    font-weight: bold;
    font-size: 14px;
    padding-top: 0px;
    padding-left: 5px;
    padding-bottom: 0px;
    margin: 0 auto;
    line-height: 100%
    width: 100%;
    overflow: hidden;
}


.news_date{
    padding-top: 0px;
    font-size: 10px;
    padding-left: 5px;
    padding-bottom: 0px;
    line-height: 100%;
    overflow: hidden;
    white-space: nowrap;
    text-overflow: ellipsis;
}

.news_header{
    padding-bottom: 0px;
}

.news_body{
    padding-bottom: 20px
}

.news-type-label {
    text-align: left;
    margin: 0 auto;
}

